CostalCloud/force-app/main/default/objects/RollupConfigs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>On/Off toggle for this particular configuration</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Filter_Clause__c</fullName>
        <inlineHelpText>Add an optional filter clause to the rollup, without quotes or punctuation. Example: AND IsActive = true</inlineHelpText>
        <label>Additional Filter Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_Object_Name__c</fullName>
        <description>Stores the API name of the child object which contains fields to be rolled up by the Parent</description>
        <inlineHelpText>Stores the API name of the child object which contains fields to be rolled up by the Parent</inlineHelpText>
        <label>Child Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config_Notes__c</fullName>
        <inlineHelpText>Optional notes about this configuration (special modifications to the trigger, explanations, etc)</inlineHelpText>
        <label>Config Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Create_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Math_Query_Type__c</fullName>
        <inlineHelpText>For aggregating queries - stores value of MAX/MIN/AVG</inlineHelpText>
        <label>Date/Math Query Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Date_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked will perform an aggregate DATE query for all configured rollups (ex: MAX(CloseDate)). Use a separate rollup configuration for &quot;normal&quot; rollups.</inlineHelpText>
        <label>Do Date Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Date_Time_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked will perform an aggregate DATETIME query for all configured rollups (ex: MAX(CreatedDate)). Use a separate rollup configuration for &quot;normal&quot; rollups.</inlineHelpText>
        <label>Do Date/Time Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Math_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked will perform an aggregate NUMERIC query for all configured rollups (ex: MAX(Amount)). Use a separate rollup configuration for &quot;normal&quot; rollups.</inlineHelpText>
        <label>Do Math Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</description>
        <inlineHelpText>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</inlineHelpText>
        <label>Parent Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, rollup helper will execute as asynchronous and queueable. This will help with large data volumes, but may take several seconds (or even minutes) for results to appear in Salesforce.</inlineHelpText>
        <label>Use Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentQueryField10__c</fullName>
        <label>parentQueryField10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentQueryField11__c</fullName>
        <label>parentQueryField11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentQueryField12__c</fullName>
        <label>parentQueryField12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentRowCount__c</fullName>
        <description>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</description>
        <inlineHelpText>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</inlineHelpText>
        <label>parentRowCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField10__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField11__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField12__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField_parentRelationshipName__c</fullName>
        <description>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</description>
        <inlineHelpText>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</inlineHelpText>
        <label>queryField_parentRelationshipName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RollupConfigs</label>
</CustomObject>